Trying to fix the scrollbar to not appear on mobile devices

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 html body {
     background-color: var(--clr-dark);
     font-size: 100%;
-    overflow-y: auto;
+    overflow-y: none;
     display: flex;
     justify-content: center;
     min-width: 768px;
@@ -364,23 +364,3 @@ h2 {
     }
 }
 
-@media screen and (max-width: 768px) {
-
-    #left-box {
-        position: absolute;
-        bottom: 0;
-        text-align: center;
-        margin-top: 24px;
-        top: 130%;
-        left: auto;
-    }
-}
-
-@media screen and (max-width: 768px){
-    ::-webkit-scrollbar {
-        -webkit-appearance: none;
-    }  
-  body{
-    overflow-y: hidden;
-  }
-}
